# Birthday-Reminder

./: README.md  app.py  pyproject.toml
src/bday/: bday_list.py  person.py  utils.py
static/styles/: style.css
templates/: add_form.html  edit_form.html  footer.html  header.html  index.html
