[project]
name = "bday"
version = "0.1.0"
description = "Birthday Reminder App"
authors = [
    {name = "Oliver",email = "oliver@bytesofit.se"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "bday", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
